# projetoSTG

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: authorization.example.yaml  config.example.yaml
docs/: ARCHITECTURE.md  CONNECTORS.md  ETHICS.md
pipelines/: full-assessment.yaml  recon.yaml
stg/: __init__.py  __main__.py  cli.py
stg/connectors/: __init__.py
stg/connectors/creds/: __init__.py  hashcat.py  hibp.py  john.py
stg/connectors/netmon/: __init__.py  snort.py  suricata.py  wireshark.py
stg/connectors/recon/: __init__.py  amass.py  nmap.py  shodan.py
stg/connectors/siem/: __init__.py  crowdstrike.py  splunk.py  wazuh.py
stg/connectors/vuln/: __init__.py  nessus.py  nikto.py  openvas.py
stg/connectors/web/: __init__.py  burp.py  sqlmap.py  zap.py
stg/core/: __init__.py  audit.py  authorization.py  config.py  connector.py  exceptions.py  models.py  pipeline.py  registry.py  runner.py
stg/reporting/: __init__.py  reporter.py
stg/reporting/templates/: report.html.j2  report.md.j2
stg/utils/: __init__.py  logging.py  shell.py
stg/web/: __init__.py  app.py  content.py
stg/web/static/: index.html
tests/: test_authorization.py  test_models.py  test_parsers.py  test_registry.py  test_reporting.py  test_target.py  test_web.py
