[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stg-toolkit"
version = "0.1.0"
description = "STG - Security Toolkit Gateway: orquestrador unificado de ferramentas de seguranca ofensiva e defensiva."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Adauam Feistler" }]
keywords = ["security", "pentest", "soc", "orchestration", "nmap", "siem"]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1",
    "Jinja2>=3.1.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
# Integracoes que dependem de bibliotecas pesadas/opcionais.
integrations = [
    "shodan>=1.31.0",
    "python-gvm>=24.0.0",
]

[project.scripts]
stg = "stg.cli:main"

[project.urls]
Homepage = "https://github.com/Feistler/projetoSTG"
Repository = "https://github.com/Feistler/projetoSTG"

[tool.setuptools.packages.find]
include = ["stg*"]

[tool.setuptools.package-data]
"stg.reporting" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
